Adding index.html file

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <h2>Hello from Shivam. This is a test file being added to Git as a part of Module Assignment 1.4</h2>
     </body>
 </html>
